<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.adolfo.miagenda.Main2Activity"
    tools:showIn="@layout/activity_main2">


        <TextView
            android:text="@string/nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivNuevo"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="19dp"
            android:id="@+id/textView2"
            android:textColor="@android:color/background_dark" />

        <EditText
            android:layout_width="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:layout_below="@+id/textView2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/tfNombreNuevo"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_height="35dp"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:text="@string/telefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:textColor="@android:color/background_dark"
            android:layout_below="@+id/tfNombreNuevo"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:text="@string/direccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lDireccion"
            android:layout_below="@+id/tfTelefonoNuevo"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="@android:color/background_dark" />

        <EditText
            android:layout_width="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:layout_below="@+id/lDireccion"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/tfDireccionNuevo"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_height="35dp"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:text="@string/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView12"
            android:layout_below="@+id/tfDireccionNuevo"
            android:textColor="@android:color/background_dark" />

        <EditText
            android:layout_width="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:layout_below="@+id/textView13"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/tfWebNuevo"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_height="35dp"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:text="@string/web"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView13"
            android:layout_below="@+id/tfEmailNuevo"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="@android:color/background_dark" />

        <TextView
            android:text="@string/foto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tfWebNuevo"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/textView14"
            android:textColor="@android:color/background_dark" />

        <EditText
            android:layout_width="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/tfFotoNuevo"
            android:layout_below="@+id/textView14"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_height="35dp"
            android:textSize="14sp"
            android:layout_toStartOf="@+id/imageButton2"
            android:textColor="@color/colorPrimary"
            android:layout_toLeftOf="@+id/imageButton2" />

    <EditText
            android:layout_width="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/tfEmailNuevo"
            android:layout_below="@+id/textView12"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary" />

        <EditText
            android:layout_width="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/tfTelefonoNuevo"
            android:layout_height="35dp"
            android:textSize="14sp"
            android:layout_below="@+id/textView3"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/imageButton"
            android:textColor="@color/colorPrimary"
            android:layout_toLeftOf="@+id/imageButton" />

    <ImageView
            app:srcCompat="@drawable/silueta"
            android:id="@+id/ivNuevo"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_width="200dp"
            android:layout_height="110dp" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_input_add"
        android:layout_below="@+id/tfNombreNuevo"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/imageButton"
        android:onClick="masTelefonos" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_input_add"
        android:layout_below="@+id/tfWebNuevo"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/imageButton2"
        android:onClick="nuevaFoto" />

    <Button
        android:text="@string/modificar"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_below="@+id/imageButton2"
        android:layout_toLeftOf="@+id/button2"
        android:layout_toStartOf="@+id/button2"
        android:id="@+id/bModificar"
        android:onClick="modificarContacto" />

    <Button
        android:text="@string/baja"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/bModificar"
        android:layout_toRightOf="@+id/textView12"
        android:layout_toEndOf="@+id/textView12"
        android:id="@+id/bBaja"
        android:onClick="borrarContacto" />

    <Button
        android:text="@string/title_activity_acciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/bBaja"
        android:layout_toRightOf="@+id/bBaja"
        android:layout_toEndOf="@+id/bBaja"
        android:id="@+id/bAcciones"
        android:onClick="irAcciones" />


</RelativeLayout>
