<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_nuevo__contacto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.adolfo.miagenda.Nuevo_Contacto">




    <TextView
        android:text="@string/añadir"
        android:layout_width="wrap_content"
        android:layout_marginTop="17dp"
        android:id="@+id/textTitulo"
        android:textColor="@android:color/background_dark"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAlignment="center"
        android:textStyle="normal|bold"
        android:textSize="24sp"
        android:layout_height="70dp"
        />

    <EditText
        android:layout_width="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/tfNombreNuevo"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_height="35dp"
        android:textSize="14sp"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:text="@string/telefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:textColor="@android:color/background_dark"
        android:layout_below="@+id/tfNombreNuevo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/direccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lDireccion"
        android:layout_below="@+id/tfTelefonoNuevo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/background_dark" />

    <EditText
        android:layout_width="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/lDireccion"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/tfDireccionNuevo"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_height="35dp"
        android:textSize="14sp"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:text="@string/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView12"
        android:layout_below="@+id/tfDireccionNuevo"
        android:textColor="@android:color/background_dark" />

    <EditText
        android:layout_width="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/textView13"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/tfWebNuevo"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_height="35dp"
        android:textSize="14sp"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:text="@string/web"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView13"
        android:layout_below="@+id/tfEmailNuevo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/background_dark" />

    <TextView
        android:text="@string/foto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tfWebNuevo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView14"
        android:textColor="@android:color/background_dark" />

    <EditText
        android:layout_width="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/tfFotoNuevo"
        android:layout_below="@+id/textView14"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_height="35dp"
        android:textSize="14sp"
        android:layout_toStartOf="@+id/imageButton4"
        android:textColor="@color/colorPrimary"
        android:layout_toLeftOf="@+id/imageButton4" />

    <EditText
        android:layout_width="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/tfEmailNuevo"
        android:layout_below="@+id/textView12"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_height="35dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="14sp"
        android:textColor="@color/colorPrimary" />

    <EditText
        android:layout_width="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/tfTelefonoNuevo"
        android:layout_height="35dp"
        android:textSize="14sp"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/imageButton3"
        android:textColor="@color/colorPrimary"
        android:layout_toLeftOf="@+id/imageButton3" />

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:fabSize="normal"
        app:srcCompat="@android:drawable/ic_input_add"
        android:id="@+id/bAlta"
        app:backgroundTint="@color/colorPrimary"
        app:rippleColor="?android:attr/colorActivatedHighlight"
        app:elevation="0dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:id="@+id/textView2"
        android:textColor="@android:color/background_dark"
        android:layout_below="@+id/textTitulo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_input_add"
        android:id="@+id/imageButton4"
        android:onClick="meteFoto"
        android:layout_alignBottom="@+id/tfFotoNuevo"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        app:srcCompat="@drawable/silueta"
        android:id="@+id/ivNuevo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignTop="@+id/textTitulo"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/textTitulo"
        android:layout_toEndOf="@+id/textTitulo"
        android:layout_alignBottom="@+id/textTitulo" />


</RelativeLayout>
